--- a/client/components/header/header.html
+++ b/client/components/header/header.html
@@ -2,8 +2,8 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <h1>Welcome to Arcan.io</h1>
+    <p class="lead">Kick-start your blog with Arcan.io </p>
+    <img src="assets/images/logo.png" width="103" height="89" alt="I'm t-rex">
   </div>
 </header>
