--- a/client/app/post/views/admin/list.html
+++ b/client/app/post/views/admin/list.html
@@ -7,14 +7,18 @@
 
 
 
-<div class="container">
+<div class="container" data-ng-controller="PostCtrl" >
   <p>The delete user and user index api routes are restricted to users with the 'admin' role.</p>
+  <p>You may also <a href="/post/create/">create</a> posts</p>
   <ul class="list-group">
     <li class="list-group-item" ng-repeat="post in posts">
         <strong>{{post.title}}</strong><br>
-        <span class="text-muted" data-ng-bind="post.date | date: 'mediumDate"></span>
-        <a ng-click="edit(post)" class="edit"><span class="glyphicon glyphicon-edit"></span></a>
-        <a ng-click="delete(post)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
+        <span class="text-muted" data-ng-bind="post.date | date: 'mediumDate'"></span>
+        <div class="pull-right">
+          <a href="/admin/posts/{{post._id}}/edit/" class="edit"><span class="glyphicon glyphicon-edit "></span></a>
+          &nbsp;
+          <a ng-click="remove(post)" class="trash"><span class="glyphicon glyphicon-trash "></span></a>
+        </div>
     </li>
   </ul>
 </div>
