--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">clone</a>
+      <a href="/" class="navbar-brand">Arcan.io</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
@@ -15,7 +15,7 @@
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
-
+        <li ng-show="isAdmin()" ng-class="{active: isActive('/admin/posts')}"><a href="/admin/posts">Posts</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
