**DEAR LORD! NEVER EVER EDIT FILES IN THE DIST FOLDER** ahem! after hours and hours of playing around finally got image uploads working. Summernote uploads images as base64 encoded strings , so my upload schemes weren't working because I could not find a libaray to handle things properly. The trick was changing the body parser config in the express.js file to allow for larger post sizes. # Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # On branch master # Changes to be committed: #	modified:   .gitignore #	modified:   bower.json #	modified:   client/app/app.js #	modified:   client/app/post/post.controller.js #	modified:   client/app/post/views/admin/edit.html #	new file:   client/assets/images/.DS_Store #	new file:   client/assets/images/uploads/.DS_Store #	modified:   client/components/footer/footer.html #	modified:   client/index.html #	modified:   package.json #	modified:   server/api/post/index.js #	modified:   server/api/post/post.controller.js #	modified:   server/config/express.js #

--- a/client/app/post/views/admin/edit.html
+++ b/client/app/post/views/admin/edit.html
@@ -9,7 +9,7 @@
   <div class="container">
 
 
-    <form name="postForm" class="form-horizontal" data-ng-submit="update()" novalidate>
+    <form name="postForm" class="form-horizontal" data-ng-submit="update()" enctype="multipart/form-data"novalidate>
       <fieldset>
         <div class="form-group" >
           <label class="control-label" for="title">Title</label>
@@ -20,7 +20,8 @@
         <div class="form-group">
           <label class="control-label" for="content">Content</label>
           <div class="controls">
-            <summernote height="300" data-ng-model="post.content"></summernote>
+           <summernote height="300" data-ng-model="post.content" ></summernote>
+
           </div>
         </div>
         <div class="form-group">
