--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer">
   <div class="container">
-      <p>Whoop whoop</p>
+      Arcan.io is powered by the Yeoman Angular-Fullstack generator and assembled by <a href="http://tyoungjr.com">tyoungjr.com</a>
+
   </div>
 </footer>
